[gd_scene load_steps=2 format=3 uid="uid://df1s8j1ir7sb"]

[ext_resource type="Script" uid="uid://b07bcbgu35f67" path="res://src/Interlude/statement_line.gd" id="1_swbfc"]

[node name="StatementLine" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_swbfc")

[node name="DescriptionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Description"

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="UnitValueLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "$1"
horizontal_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="QuantityLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "123"
horizontal_alignment = 2

[node name="MarginContainer3" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="ValueLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "$123"
horizontal_alignment = 2
